# chatgpt-quotes

./: .gitignore  LICENSE  README.md  ai-plugin.json  pyproject.toml
server/: main.py
